// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusChip renders icon when provided 1`] = `
<View
  accessibilityLabel="Status: Dispatched"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(22,163,74,0.12)",
      "borderColor": "rgba(22,163,74,0.25)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Icon
    color="#15803d"
    name="checkmark-circle"
    size={12}
  />
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#15803d",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    Dispatched
  </Text>
</View>
`;

exports[`StatusChip sm vs md size snapshots: md 1`] = `
<View
  accessibilityLabel="Status: A"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0,0,0,0.06)",
      "borderColor": "rgba(0,0,0,0.10)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 14,
      "paddingVertical": 8,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(0,0,0,0.80)",
        "fontSize": 14,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    A
  </Text>
</View>
`;

exports[`StatusChip sm vs md size snapshots: sm 1`] = `
<View
  accessibilityLabel="Status: A"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0,0,0,0.06)",
      "borderColor": "rgba(0,0,0,0.10)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(0,0,0,0.80)",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    A
  </Text>
</View>
`;

exports[`StatusChip tone="cancelled" snapshot 1`] = `
<View
  accessibilityLabel="Status: CANCELLED"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0,0,0,0.04)",
      "borderColor": "rgba(0,0,0,0.12)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(0,0,0,0.55)",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    CANCELLED
  </Text>
</View>
`;

exports[`StatusChip tone="danger" snapshot 1`] = `
<View
  accessibilityLabel="Status: DANGER"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(220,38,38,0.10)",
      "borderColor": "rgba(220,38,38,0.25)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#B91C1C",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    DANGER
  </Text>
</View>
`;

exports[`StatusChip tone="info" snapshot 1`] = `
<View
  accessibilityLabel="Status: INFO"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(33,118,255,0.10)",
      "borderColor": "rgba(33,118,255,0.20)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#1565C0",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    INFO
  </Text>
</View>
`;

exports[`StatusChip tone="neutral" snapshot 1`] = `
<View
  accessibilityLabel="Status: NEUTRAL"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(0,0,0,0.06)",
      "borderColor": "rgba(0,0,0,0.10)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "rgba(0,0,0,0.80)",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    NEUTRAL
  </Text>
</View>
`;

exports[`StatusChip tone="pending" snapshot 1`] = `
<View
  accessibilityLabel="Status: PENDING"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(255,179,0,0.12)",
      "borderColor": "rgba(255,179,0,0.25)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#8A5A00",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    PENDING
  </Text>
</View>
`;

exports[`StatusChip tone="progress" snapshot 1`] = `
<View
  accessibilityLabel="Status: PROGRESS"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(130,26,82,0.10)",
      "borderColor": "rgba(130,26,82,0.20)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#821A52",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    PROGRESS
  </Text>
</View>
`;

exports[`StatusChip tone="success" snapshot 1`] = `
<View
  accessibilityLabel="Status: SUCCESS"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(22,163,74,0.12)",
      "borderColor": "rgba(22,163,74,0.25)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#15803d",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    SUCCESS
  </Text>
</View>
`;

exports[`StatusChip tone="warning" snapshot 1`] = `
<View
  accessibilityLabel="Status: WARNING"
  accessibilityRole="text"
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(234,88,12,0.12)",
      "borderColor": "rgba(234,88,12,0.25)",
      "borderRadius": 999,
      "borderWidth": 1,
      "flexDirection": "row",
      "gap": 6,
      "paddingHorizontal": 10,
      "paddingVertical": 4,
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      {
        "color": "#9A3412",
        "fontSize": 12,
        "fontWeight": "600",
        "letterSpacing": 0.2,
      }
    }
  >
    WARNING
  </Text>
</View>
`;
